# robot-converter

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: robot_link.h
src/exporter/: urdf_exporter.cpp  urdf_exporter.h
src/parser/: step_parser.cpp  step_parser.h
test_data/: industrial_arm.step
